--- a/css/index.css
+++ b/css/index.css
@@ -1,32 +1,39 @@
 /* common css */
 * {
-   margin: 0;
-   padding: 0;
-   box-sizing: border-box;
-}
-ul {
-  list-style-type:none;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
 }
 
+ul {
+	list-style-type: none;
+}
+
+a {
+	color: inherit;
+	text-decoration: none;
+}
+
+/* header css */
 body {
 	background: #EEE;
 }
 
-/* header css */
 .searchForm {
 	padding: 20px;
 	display: flex;
 	justify-content: center;
 }
-.searchForm > input{
+
+.searchForm>input {
 	padding: 10px;
 	width: 250px;
 	border-radius: 5px;
 	border: 1px solid #DDD;
 }
-.searchForm > button{
+
+.searchForm>button {
 	width: 70px;
-	padding: 10px;
 	background: #0282B9;
 	color: white;
 	margin-left: 7px;
@@ -34,10 +41,49 @@ body {
 }
 
 /* pc端 使用 */
-.searchForm button:hover{
+.searchForm button:hover {
 	cursor: pointer;
 }
 
 
 /* main css */
+
+.globalMain>.navList {
+	margin: 10px 20px;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: space-between;
+}
+
+.navList>li {
+	margin-bottom: 10px;
+}
+
+.navList>li>.nav {
+	width: 160px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background: white;
+	border: 1px solid #DDD;
+	border-radius: 4px;
+	padding: 20px 0;
+	position: relative;
+	cursor: pointer;
+}
+
+.nav>.logo {
+	width: 64px;
+	height: 64px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	font-size: 64px;
+}
+
+.nav>.link {
+	font-size: 14px;
+	margin-top: 4px;
+}
 
