--- a/style.css
+++ b/style.css
@@ -1,10 +1,11 @@
-/* css reset */
+/* css common */
 * {box-sizing: border-box;}
 *:before, *:after {box-sizing: border-box;}
 * {margin: 0; padding: 0;}
 ul, ol { list-style: none; }
 a {color: inherit; text-decoration: none;}
 img {max-width: 100%; max-height: 100%;}
+
 /* style */
 body {background: #EEE;}
 .globalHeader {
@@ -42,6 +43,7 @@ body {background: #EEE;}
   background: #0282B9;
   color: white;
   font-size: 16px;
+  cursor: pointer;
 }
 .globalMain {
   max-width: 900px;
@@ -60,6 +62,7 @@ body {background: #EEE;}
     margin-left: 0;
     margin-right: -25px;
     justify-content: flex-start;
+	cursor: pointer;
   }
 }
 .siteList > li {
@@ -123,6 +126,7 @@ body {background: #EEE;}
 .siteList .addButton .text {
   font-size: 14px;
   margin-top: 4px;
+  
 }
 .siteList .addButton .icon-wrapper {
   width: 64px;
